cmabios para ver tabla

--- a/index.html
+++ b/index.html
@@ -101,6 +101,19 @@
             <button onclick="enviarQuiniela()">ENVIAR QUINIELA</button>
             <!-- <button onclick="revisarPuntaje()">REVISAR PUNTAJE</button> -->
         </div>
+        <button onclick="verMiQuiniela()" class="ver-btn">Ver mi Quiniela</button>
+
+<div id="mi-quiniela" style="display: none;">
+  <h2>Tu Quiniela</h2>
+  <ul id="lista-mi-quiniela"></ul>
+</div>
+
+<hr/>
+
+<div id="tabla-general">
+  <h2>Tabla de Participantes</h2>
+  <ul id="lista-participantes"></ul>
+</div>
     </div>
 
     <!-- Firebase SDK -->
