--- a/index.html
+++ b/index.html
@@ -17,78 +17,6 @@
         <img src="logos/logo.png" class="logo" alt="Logo Quiniela" />
         <h1>Semifinales Champions League 2025</h1>
 
-        <!-- Partido 1 -->
-        <div class="partido">
-            <div class="equipos">
-                <div class="equipo">
-                    <img src="logos/madrid.png" alt="Real Madrid">
-                    <span>REAL MADRID</span>
-                </div>
-                <div class="inputs">
-                    <input type="number" placeholder="0" min="0" class="marcador" />
-                    <input type="number" placeholder="0" min="0" class="marcador" />
-                </div>
-                <div class="equipo">
-                    <img src="logos/arsenal.png" alt="Arsenal">
-                    <span>ARSENAL</span>
-                </div>
-            </div>
-        </div>
-
-        <!-- Partido 2 -->
-        <div class="partido">
-            <div class="equipos">
-                <div class="equipo">
-                    <img src="logos/barecelona.png" alt="Barcelona">
-                    <span>BARCELONA</span>
-                </div>
-                <div class="inputs">
-                    <input type="number" placeholder="0" min="0" class="marcador" />
-                    <input type="number" placeholder="0" min="0" class="marcador" />
-                </div>
-                <div class="equipo">
-                    <img src="logos/borusia.png" alt="Borussia Dortmund">
-                    <span>BORUSSIA DORTMUND</span>
-                </div>
-            </div>
-        </div>
-
-        <!-- Partido 3 -->
-        <div class="partido">
-            <div class="equipos">
-                <div class="equipo">
-                    <img src="logos/paris.png" alt="Paris SG">
-                    <span>PARIS STG</span>
-                </div>
-                <div class="inputs">
-                    <input type="number" placeholder="0" min="0" class="marcador" />
-                    <input type="number" placeholder="0" min="0" class="marcador" />
-                </div>
-                <div class="equipo">
-                    <img src="logos/aston.png" alt="Aston Villa">
-                    <span>ASTON VILLA</span>
-                </div>
-            </div>
-        </div>
-
-        <!-- Partido 4 -->
-        <div class="partido">
-            <div class="equipos">
-                <div class="equipo">
-                    <img src="logos/inter.png" alt="Inter Milan">
-                    <span>INTER MILAN</span>
-                </div>
-                <div class="inputs">
-                    <input type="number" placeholder="0" min="0" class="marcador" />
-                    <input type="number" placeholder="0" min="0" class="marcador" />
-                </div>
-                <div class="equipo">
-                    <img src="logos/bayer.png" alt="Bayern Munich">
-                    <span>BAYERN MUNICH</span>
-                </div>
-            </div>
-        </div>
-
         <!-- Formulario -->
         <div class="form">
             <input type="text" placeholder="Nombre de usuario" id="nombre" required />
@@ -108,6 +36,8 @@
             <h2>Tabla de Participantes</h2>
             <ul id="lista-participantes"></ul>
         </div>
+
+        <a href="resultados.html" class="button" style="margin-top: 20px;">Ver Resultados Detallados</a>
     </div>
 
     <!-- Firebase SDK -->
@@ -197,8 +127,19 @@
             querySnapshot.forEach(doc => {
                 const data = doc.data();
                 const puntos = data.puntos || 0;
+
+                // Crear barra de progreso
+                const progressBar = document.createElement("div");
+                progressBar.className = "progress-bar";
+                progressBar.style.width = `${(puntos / 8) * 100}%`;
+
                 const item = document.createElement("li");
-                item.textContent = `${data.nombre || "Sin nombre"} - ${puntos} puntos`;
+                item.innerHTML = `
+                    <span>${data.nombre || "Sin nombre"} - ${puntos} puntos</span>
+                    <div class="progress-container">
+                        ${progressBar.outerHTML}
+                    </div>
+                `;
                 lista.appendChild(item);
             });
         };
