--- a/index.html
+++ b/index.html
@@ -17,6 +17,78 @@
         <img src="logos/logo.png" class="logo" alt="Logo Quiniela" />
         <h1>Semifinales Champions League 2025</h1>
 
+        <!-- Partido 1 -->
+        <div class="partido">
+            <div class="equipos">
+                <div class="equipo">
+                    <img src="logos/madrid.png" alt="Real Madrid">
+                    <span>REAL MADRID</span>
+                </div>
+                <div class="inputs">
+                    <input type="number" placeholder="0" min="0" class="marcador" />
+                    <input type="number" placeholder="0" min="0" class="marcador" />
+                </div>
+                <div class="equipo">
+                    <img src="logos/arsenal.png" alt="Arsenal">
+                    <span>ARSENAL</span>
+                </div>
+            </div>
+        </div>
+
+        <!-- Partido 2 -->
+        <div class="partido">
+            <div class="equipos">
+                <div class="equipo">
+                    <img src="logos/barcelona.png" alt="Barcelona">
+                    <span>BARCELONA</span>
+                </div>
+                <div class="inputs">
+                    <input type="number" placeholder="0" min="0" class="marcador" />
+                    <input type="number" placeholder="0" min="0" class="marcador" />
+                </div>
+                <div class="equipo">
+                    <img src="logos/borussia.png" alt="Borussia Dortmund">
+                    <span>BORUSSIA DORTMUND</span>
+                </div>
+            </div>
+        </div>
+
+        <!-- Partido 3 -->
+        <div class="partido">
+            <div class="equipos">
+                <div class="equipo">
+                    <img src="logos/paris.png" alt="Paris SG">
+                    <span>PARIS SG</span>
+                </div>
+                <div class="inputs">
+                    <input type="number" placeholder="0" min="0" class="marcador" />
+                    <input type="number" placeholder="0" min="0" class="marcador" />
+                </div>
+                <div class="equipo">
+                    <img src="logos/aston.png" alt="Aston Villa">
+                    <span>ASTON VILLA</span>
+                </div>
+            </div>
+        </div>
+
+        <!-- Partido 4 -->
+        <div class="partido">
+            <div class="equipos">
+                <div class="equipo">
+                    <img src="logos/inter.png" alt="Inter Milan">
+                    <span>INTER MILAN</span>
+                </div>
+                <div class="inputs">
+                    <input type="number" placeholder="0" min="0" class="marcador" />
+                    <input type="number" placeholder="0" min="0" class="marcador" />
+                </div>
+                <div class="equipo">
+                    <img src="logos/bayern.png" alt="Bayern Munich">
+                    <span>BAYERN MUNICH</span>
+                </div>
+            </div>
+        </div>
+
         <!-- Formulario -->
         <div class="form">
             <input type="text" placeholder="Nombre de usuario" id="nombre" required />
