cmabio de nombre

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Contenedor principal de la quiniela -->
     <div class="container" id="quiniela-container">
         <img src="logos/logo.png" class="logo" alt="Logo Quiniela" />
-        <h1>Semifinales Champions League 2025</h1>
+        <h1>Liga MX Jornada 15</h1>
 
         <!-- Partido 1 -->
         <div class="partido">
