--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quiniela La Victoria - Champions</title>
+    <title>Quiniela La Victoria - Liga MX</title>
 
     <!-- Fuente Bebas Neue de Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
@@ -16,44 +16,179 @@
     <!-- Contenedor principal de la quiniela -->
     <div class="container" id="quiniela-container">
         <img src="logos/logo.png" class="logo" alt="Logo Quiniela" />
-        <h1>Liga MX Jornada 15</h1>
+        <h1>Liga MX Jornada 16</h1>
 
-        <!-- Partido 1 -->
-        <div class="partido">
-            <div class="equipos">
-                <div class="equipo">
-                    <img src="logos/madrid.png" alt="Real Madrid">
-                    <span>REAL MADRID</span>
-                </div>
-                <div class="inputs">
-                    <input type="number" placeholder="0" min="0" class="marcador" />
-                    <input type="number" placeholder="0" min="0" class="marcador" />
-                </div>
-                <div class="equipo">
-                    <img src="logos/arsenal.png" alt="Arsenal">
-                    <span>ARSENAL</span>
-                </div>
-            </div>
+<!-- Partido 1 - Viernes 18 de abril - 19:00 -->
+<div class="partido">
+    <p>Viernes 18 de abril - 19:00</p>
+    <div class="equipos">
+        <div class="equipo">
+            <img src="logos/logos_MX/MAZ.jpeg" alt="Mazatlán">
+            <span>MAZATLÁN</span>
         </div>
+        <div class="inputs">
+            <input type="number" placeholder="0" min="0" class="marcador" />
+            <input type="number" placeholder="0" min="0" class="marcador" />
+        </div>
+        <div class="equipo">
+            <img src="logos/logos_MX/JUA.png" alt="FC Juárez">
+            <span>FC JUÁREZ</span>
+        </div>
+    </div>
+</div>
 
-    
-        <!-- Partido 4 -->
-        <div class="partido">
-            <div class="equipos">
-                <div class="equipo">
-                    <img src="logos/inter.png" alt="Inter Milan">
-                    <span>INTER MILAN</span>
-                </div>
-                <div class="inputs">
-                    <input type="number" placeholder="0" min="0" class="marcador" />
-                    <input type="number" placeholder="0" min="0" class="marcador" />
-                </div>
-                <div class="equipo">
-                    <img src="logos/bayer.png" alt="Bayern Munich">
-                    <span>BAYERN MUNICH</span>
-                </div>
-            </div>
+<!-- Partido 2 - Viernes 18 de abril - 21:00 -->
+<div class="partido">
+    <p>Viernes 18 de abril - 21:00</p>
+    <div class="equipos">
+        <div class="equipo">
+            <img src="logos/logos_MX/ASL.png" alt="Atlético San Luis">
+            <span>ATLÉTICO SAN LUIS</span>
         </div>
+        <div class="inputs">
+            <input type="number" placeholder="0" min="0" class="marcador" />
+            <input type="number" placeholder="0" min="0" class="marcador" />
+        </div>
+        <div class="equipo">
+            <img src="logos/logos_MX/TOL.png" alt="Toluca">
+            <span>TOLUCA</span>
+        </div>
+    </div>
+</div>
+
+<!-- Partido 3 - Viernes 18 de abril - 21:10 -->
+<div class="partido">
+    <p>Viernes 18 de abril - 21:10</p>
+    <div class="equipos">
+        <div class="equipo">
+            <img src="logos/logos_MX/" alt="Tijuana">
+            <span>TIJUANA</span>
+        </div>
+        <div class="inputs">
+            <input type="number" placeholder="0" min="0" class="marcador" />
+            <input type="number" placeholder="0" min="0" class="marcador" />
+        </div>
+        <div class="equipo">
+            <img src="logos/logos_MX/PUE.png" alt="Puebla">
+            <span>PUEBLA</span>
+        </div>
+    </div>
+</div>
+
+<!-- Partido 4 - Sábado 19 de abril - 17:00 -->
+<div class="partido">
+    <p>Sábado 19 de abril - 17:00</p>
+    <div class="equipos">
+        <div class="equipo">
+            <img src="logos/logos_MX/" alt="León">
+            <span>LEÓN</span>
+        </div>
+        <div class="inputs">
+            <input type="number" placeholder="0" min="0" class="marcador" />
+            <input type="number" placeholder="0" min="0" class="marcador" />
+        </div>
+        <div class="equipo">
+            <img src="logos/logos_MX/MTY.png" alt="Monterrey">
+            <span>MONTERREY</span>
+        </div>
+    </div>
+</div>
+
+<!-- Partido 5 - Sábado 19 de abril - 19:05 -->
+<div class="partido">
+    <p>Sábado 19 de abril - 19:05</p>
+    <div class="equipos">
+        <div class="equipo">
+            <img src="logos/logos_MX/UANL.png" alt="Tigres">
+            <span>TIGRES</span>
+        </div>
+        <div class="inputs">
+            <input type="number" placeholder="0" min="0" class="marcador" />
+            <input type="number" placeholder="0" min="0" class="marcador" />
+        </div>
+        <div class="equipo">
+            <img src="logos/logos_MX/NEC.png" alt="Necaxa">
+            <span>NECAXA</span>
+        </div>
+    </div>
+</div>
+
+<!-- Partido 6 - Sábado 19 de abril - 19:05 -->
+<div class="partido">
+    <p>Sábado 19 de abril - 19:05</p>
+    <div class="equipos">
+        <div class="equipo">
+            <img src="logos/logos_MX/GDL.png" alt="Chivas">
+            <span>CHIVAS</span>
+        </div>
+        <div class="inputs">
+            <input type="number" placeholder="0" min="0" class="marcador" />
+            <input type="number" placeholder="0" min="0" class="marcador" />
+        </div>
+        <div class="equipo">
+            <img src="logos/logos_MX/QRO.png" alt="Querétaro">
+            <span>QUERÉTARO</span>
+        </div>
+    </div>
+</div>
+
+<!-- Partido 7 - Sábado 19 de abril - 19:05 -->
+<div class="partido">
+    <p>Sábado 19 de abril - 19:05</p>
+    <div class="equipos">
+        <div class="equipo">
+            <img src="logos/logos_MX/" alt="Santos Laguna">
+            <span>SANTOS LAGUNA</span>
+        </div>
+        <div class="inputs">
+            <input type="number" placeholder="0" min="0" class="marcador" />
+            <input type="number" placeholder="0" min="0" class="marcador" />
+        </div>
+        <div class="equipo">
+            <img src="logos/logos_MX/PAC.png" alt="Pachuca">
+            <span>PACHUCA</span>
+        </div>
+    </div>
+</div>
+
+<!-- Partido 8 - Sábado 19 de abril - 21:10 -->
+<div class="partido">
+    <p>Sábado 19 de abril - 21:10</p>
+    <div class="equipos">
+        <div class="equipo">
+            <img src="logos/logos_MX/UNAM.png" alt="Pumas">
+            <span>PUMAS</span>
+        </div>
+        <div class="inputs">
+            <input type="number" placeholder="0" min="0" class="marcador" />
+            <input type="number" placeholder="0" min="0" class="marcador" />
+        </div>
+        <div class="equipo">
+            <img src="logos/logos_MX/AME.png" alt="América">
+            <span>AMÉRICA</span>
+        </div>
+    </div>
+</div>
+
+<!-- Partido 9 - Domingo 20 de abril - 18:00 -->
+<div class="partido">
+    <p>Domingo 20 de abril - 18:00</p>
+    <div class="equipos">
+        <div class="equipo">
+            <img src="logos/logos_MX/CAZ.png" alt="Cruz Azul">
+            <span>CRUZ AZUL</span>
+        </div>
+        <div class="inputs">
+            <input type="number" placeholder="0" min="0" class="marcador" />
+            <input type="number" placeholder="0" min="0" class="marcador" />
+        </div>
+        <div class="equipo">
+            <img src="logos/logos_MX/" alt="Atlas">
+            <span>ATLAS</span>
+        </div>
+    </div>
+</div>
+
 
         <!-- Formulario -->
 <!-- Formulario -->
