--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
 <!-- Partido 1 - Viernes 18 de abril - 19:00 -->
 <div class="partido">
-    <p>Viernes 18 de abril - 19:00</p>
+    <p class="fecha">Viernes 18 de abril - 19:00</p>
     <div class="equipos">
         <div class="equipo">
-            <img src="logos/logos_MX/MAZ.jpeg" alt="Mazatlán">
+            <img src="logos/logos_MX/MAZATLAN2.png" alt="Mazatlán">
             <span>MAZATLÁN</span>
         </div>
         <div class="inputs">
@@ -31,7 +31,7 @@
             <input type="number" placeholder="0" min="0" class="marcador" />
         </div>
         <div class="equipo">
-            <img src="logos/logos_MX/JUA.png" alt="FC Juárez">
+            <img src="logos/logos_MX/XOLOS.png" alt="FC Juárez">
             <span>FC JUÁREZ</span>
         </div>
     </div>
@@ -39,10 +39,10 @@
 
 <!-- Partido 2 - Viernes 18 de abril - 21:00 -->
 <div class="partido">
-    <p>Viernes 18 de abril - 21:00</p>
+    <p class="fecha">Viernes 18 de abril - 21:00</p>
     <div class="equipos">
         <div class="equipo">
-            <img src="logos/logos_MX/ASL.png" alt="Atlético San Luis">
+            <img src="logos/logos_MX/SANLUIS.png" alt="Atlético San Luis">
             <span>ATLÉTICO SAN LUIS</span>
         </div>
         <div class="inputs">
@@ -50,7 +50,7 @@
             <input type="number" placeholder="0" min="0" class="marcador" />
         </div>
         <div class="equipo">
-            <img src="logos/logos_MX/TOL.png" alt="Toluca">
+            <img src="logos/logos_MX/TOLUCA.png" alt="Toluca">
             <span>TOLUCA</span>
         </div>
     </div>
@@ -58,10 +58,10 @@
 
 <!-- Partido 3 - Viernes 18 de abril - 21:10 -->
 <div class="partido">
-    <p>Viernes 18 de abril - 21:10</p>
+    <p class="fecha">Viernes 18 de abril - 21:10</p>
     <div class="equipos">
         <div class="equipo">
-            <img src="logos/logos_MX/" alt="Tijuana">
+            <img src="logos/logos_MX/TIJUANA.png" alt="Tijuana">
             <span>TIJUANA</span>
         </div>
         <div class="inputs">
@@ -69,7 +69,7 @@
             <input type="number" placeholder="0" min="0" class="marcador" />
         </div>
         <div class="equipo">
-            <img src="logos/logos_MX/PUE.png" alt="Puebla">
+            <img src="logos/logos_MX/PUEBLA.png" alt="Puebla">
             <span>PUEBLA</span>
         </div>
     </div>
@@ -77,10 +77,10 @@
 
 <!-- Partido 4 - Sábado 19 de abril - 17:00 -->
 <div class="partido">
-    <p>Sábado 19 de abril - 17:00</p>
+    <p class="fecha">Sábado 19 de abril - 17:00</p>
     <div class="equipos">
         <div class="equipo">
-            <img src="logos/logos_MX/" alt="León">
+            <img src="logos/logos_MX/LEON.png" alt="León">
             <span>LEÓN</span>
         </div>
         <div class="inputs">
@@ -88,7 +88,7 @@
             <input type="number" placeholder="0" min="0" class="marcador" />
         </div>
         <div class="equipo">
-            <img src="logos/logos_MX/MTY.png" alt="Monterrey">
+            <img src="logos/logos_MX/MONTERREY.png" alt="Monterrey">
             <span>MONTERREY</span>
         </div>
     </div>
@@ -96,10 +96,10 @@
 
 <!-- Partido 5 - Sábado 19 de abril - 19:05 -->
 <div class="partido">
-    <p>Sábado 19 de abril - 19:05</p>
+    <p class="fecha">Sábado 19 de abril - 19:05</p>
     <div class="equipos">
         <div class="equipo">
-            <img src="logos/logos_MX/UANL.png" alt="Tigres">
+            <img src="logos/logos_MX/TIGRES.png" alt="Tigres">
             <span>TIGRES</span>
         </div>
         <div class="inputs">
@@ -107,7 +107,7 @@
             <input type="number" placeholder="0" min="0" class="marcador" />
         </div>
         <div class="equipo">
-            <img src="logos/logos_MX/NEC.png" alt="Necaxa">
+            <img src="logos/logos_MX/NECAXA.png" alt="Necaxa">
             <span>NECAXA</span>
         </div>
     </div>
@@ -115,10 +115,10 @@
 
 <!-- Partido 6 - Sábado 19 de abril - 19:05 -->
 <div class="partido">
-    <p>Sábado 19 de abril - 19:05</p>
+    <p class="fecha">Sábado 19 de abril - 19:05</p>
     <div class="equipos">
         <div class="equipo">
-            <img src="logos/logos_MX/GDL.png" alt="Chivas">
+            <img src="logos/logos_MX/GUADALAJARA.png" alt="Chivas">
             <span>CHIVAS</span>
         </div>
         <div class="inputs">
@@ -126,7 +126,7 @@
             <input type="number" placeholder="0" min="0" class="marcador" />
         </div>
         <div class="equipo">
-            <img src="logos/logos_MX/QRO.png" alt="Querétaro">
+            <img src="logos/logos_MX/QUERETARO.png" alt="Querétaro">
             <span>QUERÉTARO</span>
         </div>
     </div>
@@ -134,10 +134,10 @@
 
 <!-- Partido 7 - Sábado 19 de abril - 19:05 -->
 <div class="partido">
-    <p>Sábado 19 de abril - 19:05</p>
+    <p class="fecha">Sábado 19 de abril - 19:05</p>
     <div class="equipos">
         <div class="equipo">
-            <img src="logos/logos_MX/" alt="Santos Laguna">
+            <img src="logos/logos_MX/SANTOS.png" alt="Santos Laguna">
             <span>SANTOS LAGUNA</span>
         </div>
         <div class="inputs">
@@ -145,7 +145,7 @@
             <input type="number" placeholder="0" min="0" class="marcador" />
         </div>
         <div class="equipo">
-            <img src="logos/logos_MX/PAC.png" alt="Pachuca">
+            <img src="logos/logos_MX/PACHUCA.png" alt="Pachuca">
             <span>PACHUCA</span>
         </div>
     </div>
@@ -153,10 +153,10 @@
 
 <!-- Partido 8 - Sábado 19 de abril - 21:10 -->
 <div class="partido">
-    <p>Sábado 19 de abril - 21:10</p>
+    <p class="fecha">Sábado 19 de abril - 21:10</p>
     <div class="equipos">
         <div class="equipo">
-            <img src="logos/logos_MX/UNAM.png" alt="Pumas">
+            <img src="logos/logos_MX/PUMAS.png" alt="Pumas">
             <span>PUMAS</span>
         </div>
         <div class="inputs">
@@ -164,7 +164,7 @@
             <input type="number" placeholder="0" min="0" class="marcador" />
         </div>
         <div class="equipo">
-            <img src="logos/logos_MX/AME.png" alt="América">
+            <img src="logos/logos_MX/AMERICA.png" alt="América">
             <span>AMÉRICA</span>
         </div>
     </div>
@@ -172,10 +172,10 @@
 
 <!-- Partido 9 - Domingo 20 de abril - 18:00 -->
 <div class="partido">
-    <p>Domingo 20 de abril - 18:00</p>
+    <p class="fecha">Domingo 20 de abril - 18:00</p>
     <div class="equipos">
         <div class="equipo">
-            <img src="logos/logos_MX/CAZ.png" alt="Cruz Azul">
+            <img src="logos/logos_MX/CRUZ AZUL.png" alt="Cruz Azul">
             <span>CRUZ AZUL</span>
         </div>
         <div class="inputs">
@@ -183,7 +183,7 @@
             <input type="number" placeholder="0" min="0" class="marcador" />
         </div>
         <div class="equipo">
-            <img src="logos/logos_MX/" alt="Atlas">
+            <img src="logos/logos_MX/ATLAS.png" alt="Atlas">
             <span>ATLAS</span>
         </div>
     </div>
