--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <p class="fecha">Sábado 19 de abril - 19:00</p>
             <div class="equipos">
                 <div class="equipo">
-                    <img src="logos/logos_MX/JUA.png" alt="FC Juárez">
+                    <img src="logos/logos_MX/JUAREZ.png" alt="FC Juárez">
                     <span>FC JUÁREZ</span>
                 </div>
                 <div class="inputs">
